--- a/css/index.css
+++ b/css/index.css
@@ -360,8 +360,8 @@ body{
     justify-content: center;
     position: absolute;
     top: 1100px;
-    left: 50%; /* Set left to 50% to center horizontally */
-    transform: translateX(-50%); /* Move the element back by 50% of its width */
+    left: 50%;
+    transform: translateX(-50%);
     color: #D2B48C;
     font-weight: bold;
     font-style: italic;
@@ -373,7 +373,8 @@ body{
     justify-content: center;
     position: absolute;
     top: 1010px;
-    left: 606px;
+    left: 50%;
+    transform: translateX(-50%);
     color: #D2B48C;
     font-weight: bold;
     font-style: italic;
